<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Appearance -->
    <PreferenceCategory android:title="@string/pref_appearance_header" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/sidebar_position_entries"
            android:entryValues="@array/sidebar_position_values"
            android:key="sidebar_position"
            android:summary="@string/pref_sidebar_position_summary"
            android:title="@string/pref_sidebar_position_title" />
        
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/sidebar_theme_entries"
            android:entryValues="@array/sidebar_theme_values"
            android:key="sidebar_theme"
            android:summary="@string/pref_sidebar_theme_summary"
            android:title="@string/pref_sidebar_theme_title" />

        <com.zst.app.multiwindowsidebar.preference.SeekBarDialog
            defaultValue="100"
            maximum="100"
            minimum="0"
            suffix="%"
            android:dialogTitle="@string/pref_tab_alpha_hidden_title"
            android:key="tab_alpha_hidden"
            android:summary="@string/pref_tab_alpha_hidden_summary"
            android:title="@string/pref_tab_alpha_hidden_title" />
        
        <com.zst.app.multiwindowsidebar.preference.SeekBarDialog
            defaultValue="32"
            maximum="96"
            minimum="12"
            suffix="dp"
            android:dialogTitle="@string/pref_tab_size_title"
            android:key="tab_size"
            android:summary="@string/pref_tab_size_summary"
            android:title="@string/pref_tab_size_title" />

        <com.zst.app.multiwindowsidebar.preference.TextSizeDialog
            defaultValue="14"
            maximum="30"
            minimum="0"
            suffix="sp"
            android:dialogTitle="@string/pref_label_size_title"
            android:key="label_size"
            android:summary="@string/pref_label_size_summary"
            android:title="@string/pref_label_size_title" />

        <com.zst.app.multiwindowsidebar.preference.ColorPickerDialog
            defaultValue="FF000000"
            android:key="label_color"
            android:summary="@string/pref_label_color_summary"
            android:title="@string/pref_label_color_title" />

        <com.zst.app.multiwindowsidebar.preference.SeekBarDialog
            defaultValue="1"
            maximum="4"
            minimum="1"
            suffix=""
            android:dialogTitle="@string/pref_column_number_title"
            android:key="column_number"
            android:summary="@string/pref_column_number_summary"
            android:title="@string/pref_column_number_title" />
        
        <com.zst.app.multiwindowsidebar.preference.SeekBarDialog
            defaultValue="300"
            maximum="1000"
            minimum="0"
            suffix="ms"
            android:dialogTitle="@string/pref_animation_time_title"
            android:key="animation_time"
            android:summary="@string/pref_animation_time_summary"
            android:title="@string/pref_animation_time_title" />
    </PreferenceCategory>

</PreferenceScreen>